--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <script defer type="module" src="./js/main.js"></script>
+    <script defer type="module" src="./js/products.js"></script>
 </head>
 
 <body>
@@ -113,7 +113,7 @@
                                 </div>
                                 <div id="product-list" class="row"></div>
                                 <div class="row justify-content-center align-content-center">
-                                    <button id="load-more-button" type="button" class="loadMore btn btn-primary">load more button...</button>
+                                    <button id="load-more-button" type="button" class="loadMore btn btn-primary">load more products...</button>
                                 </div>
 
                             </div>
