--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <nav class="nav-wrapper" aria-label="Main Navigation" role="navigation">
                                 <ul class="nav-list">
                                     <li class="nav-list-item active">
-                                        <a href="/" aria-label="Go to Home page">Home</a>
+                                        <a href="./" aria-label="Go to Home page">Home</a>
                                     </li>
                                     <li class="nav-list-item">
                                         <a href="#" aria-label="Shop Women's Collection">Women</a>
